--- a/CSK_Module_MultiColorSelection/pages/pages/CSK_Module_MultiColorSelection/CSK_Module_MultiColorSelection.css
+++ b/CSK_Module_MultiColorSelection/pages/pages/CSK_Module_MultiColorSelection/CSK_Module_MultiColorSelection.css
@@ -4,9 +4,10 @@
   max-width: none;
 }
 
-.myViewer_CSK_Module_MultiColorSelection > div > div {
-  max-height: 600px;
-  min-height: 600px;
+.myViewer_CSK_Module_MultiColorSelection {
+  width: 98%;
+  height: 600px;
+  margin: auto;
 }
 
 .myCustomPlaceholder5pxHeight_CSK_Module_MultiColorSelection {
@@ -115,5 +116,5 @@
 
 .myCustomButton_CSK_Module_MultiColorSelection {
   border-radius: 30px;
-  padding-right: 0px;
+  padding: 11px;
 }
